Optimizing map -> mapPartitions