@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+# https://spark.apache.org/docs/latest/tuning.html
 # https://spark.apache.org/docs/latest/configuration.html
 # https://umbertogriffo.gitbooks.io/apache-spark-best-practices-and-tuning/content/which_storage_level_to_choose.html
 # https://jaceklaskowski.gitbooks.io/mastering-apache-spark/spark-rdd-partitions.html
@@ -8,21 +9,29 @@ bin/spark-submit \
     --deploy-mode cluster \
     --name iga-adi-graph \
     --driver-cores 3 \
-    --driver-memory 6G \
+    --driver-memory 5G \
     --executor-cores 3 \
-    --executor-memory 6G \
+    --executor-memory 5G \
     --conf spark.executor.instances=6 \
+    --conf spark.default.parallelism=108 \
     --conf spark.kubernetes.container.image.pullPolicy=Always \
     --conf spark.kubernetes.container.image=kbhit/spark \
-    --conf spark.kryoserializer.buffer=24m \
-    --conf spark.kryo.referenceTracking=false \
-    --conf spark.cleaner.periodicGC.interval=30s \
-    --conf spark.scheduler.maxRegisteredResourcesWaitingTime=120s \
     --conf spark.scheduler.minRegisteredResourcesRatio=1.0 \
-    --conf spark.rpc.message.maxSize=1000 \
-    --conf spark.network.timeout=10000s \
-    --conf spark.default.parallelism=30 \
-    --conf spark.executor.extraJavaOptions="-XX:+UseCompressedOops" \
-    --conf spark.driver.extraJavaOptions="-XX:+UseCompressedOops -Dproblem.size=192 -Dproblem.steps=100" \
+    --conf spark.scheduler.maxRegisteredResourcesWaitingTime=300s \
+    --conf spark.executor.extraJavaOptions="-XX:+UseG1GC -XX:+UseCompressedOops" \
+    --conf spark.driver.extraJavaOptions="-XX:+UseG1GC -XX:+UseCompressedOops -Dproblem.size=3072 -Dproblem.steps=1" \
     --class edu.agh.kboom.iga.adi.graph.IgaAdiPregelSolver \
     local:///opt/iga-adi-pregel.jar &
+
+
+
+    --conf spark.cleaner.periodicGC.interval=10s \
+    --conf spark.cleaner.referenceTracking.blocking=false \
+    --conf spark.cleaner.referenceTracking.blocking.shuffle=false \
+    --conf spark.default.parallelism=54 \
+
+     --conf spark.executor.extraJavaOptions="-XX:+UseG1GC -XX:+UseCompressedOops -Dlogging.operations=true -XX:+PrintGCTimeStamps -XX:+PrintGCDetails" \
+    --conf spark.driver.extraJavaOptions="-XX:+UseG1GC -XX:+UseCompressedOops -Dproblem.size=1536 -Dproblem.steps=1 -Dlogging.operations=true -XX:+PrintGCTimeStamps -XX:+PrintGCDetails " \
+
+    --conf spark.executor.heartbeatInterval=7200000 \
+    --conf spark.network.timeout=7200000 \
